# archdiff

./: LICENSE  README.md  archdiff.py  pyproject.toml
src/archdiff/: __init__.py  __main__.py
