[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archdiff"
version = "0.1.0"
description = "Generate Mermaid architecture-diff graphs from Python changes in a Git branch."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Ilya Goloborodko", email = "sok203333@gmail.com" },
]
keywords = ["architecture", "diff", "git", "mermaid", "visualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/IlyaGoloborodko/archdiff"
Repository = "https://github.com/IlyaGoloborodko/archdiff"

[project.scripts]
archdiff = "archdiff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]